force-app/main/default/objects/PartnerDetail__c/PartnerDetail__c.object-meta.xml
<CustomObject>
    <description>used to store referral partner specific details</description>
    <label>Partner Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Detail  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>