force-app/main/default/objects/PartnerDetail__c/fields/Avg_Locations_per_Owner__c.field-meta.xml
<CustomField>
    <fullName>Avg_Locations_per_Owner__c</fullName>
    <label>Avg # Locations per Owner</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>