force-app/main/default/objects/PartnerDetail__c/fields/of_States__c.field-meta.xml
<CustomField>
    <fullName>of_States__c</fullName>
    <label># of States</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>