force-app/main/default/objects/PartnerDetail__c/fields/ReferralFormCustDesc__c.field-meta.xml
<CustomField>
    <fullName>ReferralFormCustDesc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For a customer facing Referral form, the blurb that shows on the page.</inlineHelpText>
    <label>Referral Form Customer Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>