force-app/main/default/objects/PartnerDetail__c/fields/ReferralFormDescription__c.field-meta.xml
<CustomField>
    <fullName>ReferralFormDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If this Partner uses the external facing Partner Referral Form, this will override the description on the form.</inlineHelpText>
    <label>Referral Form Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>