force-app/main/default/objects/PartnerDetail__c/fields/ReferralFormLocationLabel__c.field-meta.xml
<CustomField>
    <fullName>ReferralFormLocationLabel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the label on the referral form needs to be other than Location, it can be overwritten here.</inlineHelpText>
    <label>Referral Form Location Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>