force-app/main/default/objects/PartnerDetail__c/fields/ReferralFormLogoURL__c.field-meta.xml
<CustomField>
    <fullName>ReferralFormLogoURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If there is partner logo on the referral form, enter the URL for it here.</inlineHelpText>
    <label>Referral Form Logo URL</label>
    <type>Url</type>
</CustomField>