force-app/main/default/objects/PartnerDetail__c/fields/VendorExternalURLCustom__c.field-meta.xml
<CustomField>
    <fullName>VendorExternalURLCustom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If we customize the URL for this vendor (ex vanity URL) it can be stored here.</inlineHelpText>
    <label>Vendor External URL Custom</label>
    <type>Url</type>
</CustomField>