force-app/main/default/objects/PartnerDetail__c/listViews/Referral_Products.listView-meta.xml
<ListView>
    <fullName>Referral_Products</fullName>
    <columns>NAME</columns>
    <columns>ReferralProducts__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReferralProducts__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Referral Products</label>
</ListView>